# basket-ball-robot

./: .cproject  .gitignore  .mxproject  .pre-commit-config.yaml  .project  README.asciidoc  picr_1_9tdi Debug.launch  picr_1_9tdi.ioc  pyproject.toml
Debug/: makefile  objects.list  picr_1_9tdi.elf  picr_1_9tdi.list  picr_1_9tdi.map
electronics/: .gitignore  Library.bak  Library.kicad_sym  fp-info-cache  picr_1_9tdi.kicad_pcb  picr_1_9tdi.kicad_prl  picr_1_9tdi.kicad_pro  picr_1_9tdi.kicad_sch  ~picr_1_9tdi.kicad_sch.lck
electronics/Gerber/: picr_1_9tdi-B_Cu.gbr  picr_1_9tdi-B_GND.gbr  picr_1_9tdi-B_Mask.gbr  picr_1_9tdi-B_Paste.gbr  picr_1_9tdi-B_Silkscreen.gbr  picr_1_9tdi-Edge_Cuts.gbr  picr_1_9tdi-F_Cu.gbr  picr_1_9tdi-F_GND.gbr  picr_1_9tdi-F_Mask.gbr  picr_1_9tdi-F_Paste.gbr  picr_1_9tdi-F_Silkscreen.gbr  picr_1_9tdi-NPTH-drl.gbr  picr_1_9tdi-PTH-drl.gbr  picr_1_9tdi-job.gbrjob
electronics/Gerber X2 & Drill Files/: picr_1_9tdi-B_Cu.gbr  picr_1_9tdi-B_GND.gbr  picr_1_9tdi-B_Mask.gbr  picr_1_9tdi-B_Paste.gbr  picr_1_9tdi-B_Silkscreen.gbr  picr_1_9tdi-Edge_Cuts.gbr  picr_1_9tdi-F_Cu.gbr  picr_1_9tdi-F_GND.gbr  picr_1_9tdi-F_Mask.gbr  picr_1_9tdi-F_Paste.gbr  picr_1_9tdi-F_Silkscreen.gbr  picr_1_9tdi-NPTH-drl.gbr  picr_1_9tdi-NPTH.drl  picr_1_9tdi-PTH-drl.gbr  picr_1_9tdi-PTH.drl  picr_1_9tdi-job.gbrjob
electronics/Library.pretty/: BUK6Y10-30PX.kicad_mod  C_0603_1608Metric_Pad1.08x0.95mm_HandSolder.kicad_mod  LQFP-32_7x7mm_P0.8mm.kicad_mod  (+22 more)
firmware/: .gitignore  STM32G441KBTX_FLASH.ld  picr_1_9tdi.ioc
software/: .gitignore  README.asciidoc  requirements.txt
(+124 files in other folders)
