[project]
name = "basketbot_1.9_tdi"
version = "0.1.0"  
requires-python = ">=3.10"

# Ensure 'setuptools' is specified and is up-to-date
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "ruff",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]  # enable pycodestyle + pyflakes families
ignore = ["E203"]    # ignore Black-compat rules

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
files = 'software/.*\.py'
exclude = '(setup\.py$|/test/.*\.py$)'
